--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@testing-library/react": "^10.4.9",
+    "babel-core": "6.26.3",
     "babel-jest": "^26.3.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
     "css-loader": "^4.2.2",
     "jest": "^26.4.2",
     "react-test-renderer": "^16.13.1",
@@ -28,11 +32,15 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-default-from": "7.14.5",
+    "@babel/plugin-transform-runtime": "7.14.5",
+    "@reduxjs/toolkit": "1.6.0",
+    "axios": "0.21.1",
     "cross-fetch": "^3.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
-    "react-redux": "^7.2.1",
+    "react-redux": "7.2.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   }
